# openapi/notification-spec.yaml
@@ -427,10 +427,6 @@ components:
             $ref: "#/components/schemas/ContractorTimelineJson"
           description: Timeline entries
           readOnly: true
-        visibleToTenant:
-          type: boolean
-          description: Whether a new timeline entry can be sent to the tenant
-          readOnly: true
     CountryItemJson:
       description: A country item of a list
       type: object
