# src/services/api/platform-schema.ts
@@ -5409,8 +5409,6 @@ export interface components {
     ContractorTimelineListJson: {
       /** @description Timeline entries */
       timelines?: $Read<components["schemas"]["ContractorTimelineJson"][]>;
-      /** @description Whether a new timeline entry can be sent to the tenant */
-      visibleToTenant?: $Read<boolean>;
     };
     Cookie: {
       name?: string;
